--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1559,7 +1559,7 @@
 			<key>FirmwareVolume</key>
 			<false/>
 			<key>HashServices</key>
-			<false/>
+			<true></>
 			<key>OSInfo</key>
 			<false/>
 			<key>UnicodeCollation</key>
