Rollback AirportItlwm to 2.1.0 stable, added BigSur and Monterey variants back, removed SIP disabled by default, removed CPUFriend

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -34,7 +34,7 @@
 				<key>Comment</key>
 				<string>X86 Injector</string>
 				<key>Enabled</key>
-				<false/>
+				<true/>
 				<key>Path</key>
 				<string>SSDT-PLUG.aml</string>
 			</dict>
@@ -117,14 +117,6 @@
 				<true/>
 				<key>Path</key>
 				<string>SSDT-THINK.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>Custom power management</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>ssdt_data.aml</string>
 			</dict>
 		</array>
 		<key>Delete</key>
@@ -1085,7 +1077,7 @@
 				<key>Arch</key>
 				<string>Any</string>
 				<key>BundlePath</key>
-				<string>AirportItlwm.kext</string>
+				<string>AirportItlwm_Monterey.kext</string>
 				<key>Comment</key>
 				<string>Wifi</string>
 				<key>Enabled</key>
@@ -1101,15 +1093,15 @@
 			</dict>
 			<dict>
 				<key>Arch</key>
-				<string>x86_64</string>
+				<string>Any</string>
 				<key>BundlePath</key>
-				<string>CPUFriend.kext</string>
+				<string>AirportItlwm_BigSur.kext</string>
 				<key>Comment</key>
-				<string>Frequency data injector</string>
+				<string>Wifi</string>
 				<key>Enabled</key>
-				<true/>
+				<false/>
 				<key>ExecutablePath</key>
-				<string>Contents/MacOS/CPUFriend</string>
+				<string>Contents/MacOS/AirportItlwm</string>
 				<key>MaxKernel</key>
 				<string></string>
 				<key>MinKernel</key>
@@ -1314,7 +1306,7 @@
 				<key>boot-args</key>
 				<string>keepsyms=1</string>
 				<key>csr-active-config</key>
-				<data>5wMAAA==</data>
+				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
 				<string>en-US:0</string>
 				<key>run-efi-updater</key>
