--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -601,9 +601,9 @@
 				<key>@0,display-dual-link</key>
 				<integer>1</integer>
 				<key>AAPL,ig-platform-id</key>
-				<data>AAAWGQ==</data>
+				<data>AAAWWQ==</data>
 				<key>device-id</key>
-				<data>FhkAAA==</data>
+				<data>FlkAAA==</data>
 				<key>enable-hdmi20</key>
 				<data>AQAAAA==</data>
 				<key>force-online</key>
@@ -1077,7 +1077,7 @@
 				<key>Arch</key>
 				<string>Any</string>
 				<key>BundlePath</key>
-				<string>AirportItlwm_Monterey.kext</string>
+				<string>AirportItlwm_Ventura.kext</string>
 				<key>Comment</key>
 				<string>Wifi</string>
 				<key>Enabled</key>
@@ -1376,21 +1376,21 @@
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>MLB</key>
-			<string></string>
+			<string>C028438024NHWVP1H</string>
 			<key>ProcessorType</key>
 			<integer>0</integer>
 			<key>ROM</key>
-			<data>KO1qBPOT</data>
+			<data>pMNhnaqG</data>
 			<key>SpoofVendor</key>
 			<true/>
 			<key>SystemMemoryStatus</key>
 			<string>Auto</string>
 			<key>SystemProductName</key>
-			<string>MacBookPro13,1</string>
+			<string>MacBookPro14,1</string>
 			<key>SystemSerialNumber</key>
-			<string></string>
+			<string>C02XLLZWHV29</string>
 			<key>SystemUUID</key>
-			<string></string>
+			<string>75D6BC7A-8FA7-425E-BB26-89975B9B6660</string>
 		</dict>
 		<key>UpdateDataHub</key>
 		<true/>
