--- a/EFI/OC/Kexts/CPUFriend.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/CPUFriend.kext/Contents/Info.plist
@@ -7,23 +7,25 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>BlueToolFixup</string>
+	<string>CPUFriend</string>
 	<key>CFBundleIdentifier</key>
-	<string>as.acidanthera.BlueToolFixup</string>
+	<string>org.acidanthera.driver.CPUFriend</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>BlueToolFixup</string>
+	<string>CPUFriend</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.6.7</string>
+	<string>1.2.7</string>
+	<key>CFBundleSignature</key>
+	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2.6.7</string>
+	<string>1.2.7</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
@@ -42,38 +44,62 @@
 	<string>13F100</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>BlueToolFixup</key>
+		<key>CPUFriend</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>as.acidanthera.BlueToolFixup</string>
+			<string>org.acidanthera.driver.CPUFriend</string>
 			<key>IOClass</key>
-			<string>BlueToolFixup</string>
+			<string>CPUFriend</string>
 			<key>IOMatchCategory</key>
-			<string>BlueToolFixup</string>
+			<string>CPUFriend</string>
 			<key>IOProviderClass</key>
 			<string>IOResources</string>
 			<key>IOResourceMatch</key>
 			<string>IOKit</string>
 		</dict>
+		<key>CPUFriendPlatform</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>org.acidanthera.driver.CPUFriend</string>
+			<key>IOClass</key>
+			<string>CPUFriendData</string>
+			<key>IOProbeScore</key>
+			<integer>6000</integer>
+			<key>IOPropertyMatch</key>
+			<dict>
+				<key>IOCPUNumber</key>
+				<integer>0</integer>
+			</dict>
+			<key>IOProviderClass</key>
+			<string>AppleACPICPU</string>
+			<key>IOResourceMatch</key>
+			<string>ACPI</string>
+		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.8</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2017-2022 PMheart. All rights reserved.</string>
+	<key>OSBundleCompatibleVersion</key>
+	<string>1.0</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>as.vit9696.Lilu</key>
-		<string>1.4.7</string>
+		<string>1.2.0</string>
+		<key>com.apple.iokit.IOACPIFamily</key>
+		<string>1.0.0d1</string>
 		<key>com.apple.kpi.bsd</key>
-		<string>12.0.0</string>
+		<string>10.0.0</string>
 		<key>com.apple.kpi.dsep</key>
-		<string>12.0.0</string>
+		<string>10.0.0</string>
 		<key>com.apple.kpi.iokit</key>
-		<string>12.0.0</string>
+		<string>10.0.0</string>
 		<key>com.apple.kpi.libkern</key>
-		<string>12.0.0</string>
+		<string>10.0.0</string>
 		<key>com.apple.kpi.mach</key>
-		<string>12.0.0</string>
+		<string>10.0.0</string>
 		<key>com.apple.kpi.unsupported</key>
-		<string>12.0.0</string>
+		<string>10.0.0</string>
 	</dict>
 	<key>OSBundleRequired</key>
 	<string>Root</string>
