--- a/EFI/OC/Kexts/RealtekCardReaderFriend.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/RealtekCardReaderFriend.kext/Contents/Info.plist
@@ -3,31 +3,31 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>21G531</string>
+	<string>22A380</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>BlueToolFixup</string>
+	<string>RealtekCardReaderFriend</string>
 	<key>CFBundleIdentifier</key>
-	<string>as.acidanthera.BlueToolFixup</string>
+	<string>science.firewolf.rtsf</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>BlueToolFixup</string>
+	<string>RealtekCardReaderFriend</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.6.7</string>
+	<string>1.0.4</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2.6.7</string>
+	<string>1.0.4</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>13F100</string>
+	<string>14A400</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
@@ -37,19 +37,19 @@
 	<key>DTSDKName</key>
 	<string>macosx12.3</string>
 	<key>DTXcode</key>
-	<string>1341</string>
+	<string>1401</string>
 	<key>DTXcodeBuild</key>
-	<string>13F100</string>
+	<string>14A400</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>BlueToolFixup</key>
+		<key>RealtekCardReaderFriend</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>as.acidanthera.BlueToolFixup</string>
+			<string>science.firewolf.rtsf</string>
 			<key>IOClass</key>
-			<string>BlueToolFixup</string>
+			<string>RealtekCardReaderFriend</string>
 			<key>IOMatchCategory</key>
-			<string>BlueToolFixup</string>
+			<string>RealtekCardReaderFriend</string>
 			<key>IOProviderClass</key>
 			<string>IOResources</string>
 			<key>IOResourceMatch</key>
@@ -57,7 +57,7 @@
 		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.8</string>
+	<string>10.14</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>as.vit9696.Lilu</key>
